<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.autocompleteexercise.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/static_auto_complete"/>

    <AutoCompleteTextView
        android:id="@+id/static_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showText"
        android:text="@string/show_data"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/runtime_auto_complete"
        android:paddingTop="16dp"/>

    <AutoCompleteTextView
        android:id="@+id/runtime_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/runtime_hit"/>

    <EditText
        android:id="@+id/runtime_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addNewItem"
        android:text="@string/add_item_msg"/>
</LinearLayout>
